--- a/java/snippetsjava/.project
+++ b/java/snippetsjava/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <projectDescription>
-  <name>data-structures</name>
+  <name>snippetsjava</name>
   <comment/>
   <projects>&#xD;
     </projects>
